[project]
name = "content-aggregator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "google-api-python-client>=2.188.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "nbstripout>=0.9.0",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "streamlit>=1.53.0",
]
